--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="s_temperature">0</string>
     <string name="s_degree">o</string>
     <string name="s_btn_query">查詢 36 小時天氣預測</string>
+    <string name="s_minT">0</string>
+    <string name="s_maxT">0</string>
 </resources>
